--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6.21.1",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.3",
+    "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
